Added template for mainPoint
Added template for mainPoint, need to redesign this

--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
 <!-- OWN JS -->
 <script src="js/sankeyVis.js"></script>
 <script src="js/heatMapVis.js"></script>
+<script src="js/mainPointVis.js"></script>
+
 <script src="js/bumpChartVis.js"></script>
 <script src="js/main.js"></script>
 </body>
