first draft of line chart

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="col">
                             <div class="row" style="height: 50vh;">
                                 <div class="content-section" id="bumpChartDiv">
-                                <div class="section-title">bump graph</div>
+<!--                                <div class="section-title">bump graph</div>-->
                                 </div>
                             </div>
                         </div>
