sankey vis properly updates on year select

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
                     <div class="section-title">sankey</div>
                     <div class="content-section" id="sankeyDiv">
                         <select id='yearSelector' class="custom-select align-self-center" style="width: 50%" onchange="yearChange()">
-                            <option value="1988">1988</option>
+                            <option value="1950">1950</option>
+                            <option value="1965">1965</option>
+                            <option value="1988" selected>1988</option>
                             <option value="1990">1990</option>
                             <option value="1995">1995</option>
                             <option value="2000">2000</option>
