--- a/index.html
+++ b/index.html
@@ -123,8 +123,11 @@
                 </div>
 
                 <div class="col-5 offset-1">
+                    <form>
+                        <label id="yearSliderLabel" for="yearSlider">You selected 2019 (between 1990 and 2019):</label>
 
-                    <input type="range" class="form-range   justify-content-end" style="width: 100%"  min="1990" max="2019" step="1" style="width: 50%" id="yearSlider" onchange="yearSlider()">
+                        <input type="range" class="form-range   justify-content-end" style="width: 100%"  min="1990" max="2019" step="1" value="2019" id="yearSlider" onchange="yearSliderChange(this.value)">
+                    </form>
                 </div>
             </div>
             <div class="row" style="height: 50vh;">
