update line chart

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="col-12 p-5">
             <div class="row" style="height: 50vh;">
                 <div class="col-10 offset-1">
-                    <h2 class="section-title">And their emissions compared to the global averages over time (1800 - 2020), in the following ways: </h2>
+                    <h2 class="section-title">And their emissions compared to the world's total over time, in the following ways:</h2>
                     <div class="content-section" id="bumpChartDiv">
                     </div>
                 </div>
