rotate to US as default view
rotate to US as default view on initial load. refactored the rotate earth as separate function. Add units in the drop down.

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
             <div class="row" style="height: 5vh;">
                 <div class="col-5 offset-1">
                     <select id="categorySelector" class="custom-select  justify-content-end" style="width: 100%" onchange="categoryChange()">
-                        <option value="bycountry" selected="">Consumption CO2 Emissions measured for the Country</option>
+                        <option value="bycountry" selected="">Consumption CO2 Emissions measured in million tonnes for the Country</option>
 
-                        <option value="percapita">Consumption CO2 Emissions measured per Person in the country</option>
+                        <option value="percapita">Consumption CO2 Emissions measured in tonnes per Person in the country</option>
                     </select>
 
                 </div>
