--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <!-- HEAT MAP SECTION -->
         <div class="col-12 p-5">
             <div class="section-title">Different countries around the globe contribute vastly different amounts of CO2 consumption emissions</div>
+            <div class="section-title">Hover over country for rankings and click to select for drilldown</div>
 
             <div class="row" style="height: 5vh;">
                 <div class="col-5 offset-1">
