update stat text to match new USA default

--- a/index.html
+++ b/index.html
@@ -184,10 +184,8 @@
     </div>
     <div class="row w-100" id="mainpoint-row">
         <div class="w-100 d-flex justify-content-center align-content-center text-center flex-column">
-                The United States currently (2020) ranks <span id="us-rank-compared-to-selected">HIGHER</span>
-                <div id="mainpoint-suffix" class="d-inline">
-                    than <span id="selected-country-name">Great Britain</span> in global emissions.
-                </div>
+                The United States currently (2020) ranks <span id="us-rank-compared-to-selected">#2 in the world</span>
+                <div id="mainpoint-suffix" class="d-inline">in global emissions.</div>
         </div>
     </div>
     <div class="row w-100" id="mainpoint-vis-row">
@@ -195,7 +193,7 @@
         <div class="col-12 p-5">
             <div class="row h-100">
                 <div class="col-10 offset-1">
-                    <div class="section-title">In 2020, their emissions were divided like this:</div>
+                    <div class="section-title">In 2020, their consumption emissions were divided like this:</div>
                     <div class="content-section" id="radarDiv">
                     </div>
                 </div>
