--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="row w-100" id="mainpoint-row">
         <div class="w-100 d-flex justify-content-center align-content-center text-center flex-column">
                 The United States currently (2020) ranks <span id="us-rank-compared-to-selected">#2 in the world</span>
-                <div id="mainpoint-suffix" class="d-inline">in global emissions.</div>
+                <div id="mainpoint-suffix" class="d-inline">in global consumption emissions.</div>
         </div>
     </div>
     <div class="row w-100" id="mainpoint-vis-row">
@@ -205,7 +205,7 @@
         <div class="col-12 p-5">
             <div class="row" style="min-height: 50vh;">
                 <div class="col-10 offset-1">
-                    <h2 class="section-title">And their emissions compared to the world's total over time in the following ways:</h2>
+                    <h2 class="section-title">And their consumption emissions compared to the world's total over time in the following ways:</h2>
                     <div class="content-section" id="bumpChartDiv">
                     </div>
                 </div>
