--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
     </div>
     <div class="row w-100" id="heatmap-row">
         <!-- HEAT MAP SECTION -->
-        <div class="col-sm-12">
+        <div class="col-lg-12  flex-column">
             <div class="section-title">Different countries around the globe contribute vastly different amounts of CO2 consumption emissions</div>
             <div class="section-title">Hover over country for rankings and click to select for drilldown</div>
 
             <div class="row" style="height: 5vh;">
-                <div class="col-sm-5 offset-1">
+                <div class="col-lg-5 offset-1">
                     <select id="categorySelector" class="custom-select  justify-content-end" style="width: 100%" onchange="categoryChange()">
                         <option value="bycountry" selected="">Consumption CO2 Emissions measured in million tonnes for the Country</option>
 
@@ -134,7 +134,7 @@
 
                 </div>
 
-                <div class="col-sm-5 offset-1">
+                <div class="col-lg-5 offset-1">
                     <form>
                         <label id="yearSliderLabel" for="yearSlider">You selected 2019 (between 1990 and 2019):</label>
 
@@ -146,7 +146,7 @@
 
 
 
-                <div class="col-sm-5 offset-1">
+                <div class="col-lg-5 offset-1">
                     <div class="section-title offset-3">
 
 
@@ -158,7 +158,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-5 offset-1">
+                <div class="col-lg-5 offset-1">
                     <div class="section-title" id="heatMapTitle"></div>
 
                     <div class="content-section" id="heatMapDiv">
@@ -171,9 +171,9 @@
     </div>
     <div class="row w-100" id="sankey-row">
         <!-- SANKEY SECTION -->
-        <div class="col-sm-12">
+        <div class="col-lg-12  flex-column">
             <div class="row" style="height: 50vh;">
-                <div class="col-sm-10 offset-1">
+                <div class="col-lg-10 offset-1">
                     <div class="section-title">sankey</div>
                     <div class="content-section" id="sankeyDiv">
                         <label for="customRange2" class="form-label">Example range</label>
