--- a/index.html
+++ b/index.html
@@ -174,9 +174,8 @@
         <div class="col-lg-12  flex-column">
             <div class="row" style="height: 50vh;">
                 <div class="col-lg-10 offset-1">
-                    <div class="section-title">sankey</div>
+                    <div class="section-title" id="sanKeyTitle">These are the emission sources for United States</div>
                     <div class="content-section" id="sankeyDiv">
-                        <label for="customRange2" class="form-label">Example range</label>
                     </div>
                 </div>
             </div>
@@ -217,6 +216,17 @@
         <div class="col-12 p-5">
             <div class="section-title">solution resolution</div>
             <div class="content-section" id="solutionDiv">
+                Report card for USA: <br>
+                Insert tank gauges for different emission sources here
+                <br>
+                <br>
+                What you can do to make a difference?
+                <br>
+
+                <a href="https://19january2017snapshot.epa.gov/climatechange/what-you-can-do-home_.html" class="card-link">What you can do to reduce greenhouse gases</a>
+
+
+
             </div>
         </div>
     </div>
