--- a/index.html
+++ b/index.html
@@ -257,23 +257,59 @@
 
                         <a href="https://19january2017snapshot.epa.gov/climatechange/what-you-can-do-home_.html" class="card-link">What you can do to reduce greenhouse gases</a>
 
-                        <div class="form-check">
+                        <div class="form-check" id="btnGroup">
                             <br>
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                          <label class="form-check-label" for="defaultCheck1">
-                            <h4>Oil</h4>
-                          </label>
-                          <p>Solution suggestion</p>
-                          <p>Solution suggestion</p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                  <input class="form-check-input co2-box" type="checkbox" value="Oil" id="oilCheck" checked="checked">
+                                  <label class="form-check-label" for="defaultCheck1">
+                                    <h4>Oil</h4>
+                                  </label>
+                                  <p>Solution suggestion goes here.</p>
+                                  <p>Solution suggestion goes here.</p>
+                                  <br>
+                                  <input class="form-check-input co2-box" type="checkbox" value="Gas" id="gasCheck" checked="checked">
+                                  <label class="form-check-label" for="defaultCheck1">
+                                    <h4>Gas</h4>
+                                  </label>
+                                  <p>Solution suggestion goes here.</p>
+                                  <p>Solution suggestion goes here.</p>
+                                  <br>
+                                  <input class="form-check-input co2-box" type="checkbox" value="Coal" id="coalCheck" checked="checked">
+                                  <label class="form-check-label" for="defaultCheck1">
+                                    <h4>Coal</h4>
+                                  </label>
+                                  <p>Solution suggestion goes here.</p>
+                                  <p>Solution suggestion goes here.</p>
+                                </div>
+
+                                <div class="col-md-6">
+                                  <input class="form-check-input co2-box" type="checkbox" value="Flaring" id="flaringCheck" checked="checked">
+                                  <label class="form-check-label" for="defaultCheck1">
+                                    <h4>Flaring</h4>
+                                  </label>
+                                  <p>Solution suggestion goes here.</p>
+                                  <p>Solution suggestion goes here.</p>
+                                  <br>
+                                  <input class="form-check-input co2-box" type="checkbox" value="Cement" id="cementCheck" checked="checked">
+                                  <label class="form-check-label" for="defaultCheck1">
+                                    <h4>Cement</h4>
+                                  </label>
+                                  <p>Solution suggestion goes here.</p>
+                                  <p>Solution suggestion goes here.</p>
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="form-check">
-                          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                    </div>
+<!--                         <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="gasCheck">
                           <label class="form-check-label" for="defaultCheck1">
                             <h4>Gas</h4>
                           </label>
-                          <p>Solution suggestion</p>
-                          <p>Solution suggestion</p>
-                        </div>
+                          <p>Solution suggestion goes here.</p>
+                          <p>Solution suggestion goes here.</p>
+                        </div> -->
 
                     </div>
 
