--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <select id="categorySelector" class="custom-select  justify-content-end" style="width: 100%" onchange="categoryChange()">
                         <option value="bycountry" selected="">Consumption CO2 Emissions measured in million tonnes for the Country</option>
 
-                        <option value="percapita">Consumption CO2 Emissions measured in tonnes per Person in the country</option>
+                        <option value="percapita">Consumption CO2 Emissions measured in tonnes per Person (and representing their country)</option>
                     </select>
 
                 </div>
