--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- HEAT MAP SECTION -->
         <div class="col-lg-12  flex-column">
             <div class="section-title">Different countries around the globe contribute vastly different amounts of CO2 consumption emissions</div>
-            <div class="section-subtitle mb-5">Hover over country for rankings and click to select for drilldown</div>
+            <div class="section-subtitle mb-5">Hover over country for rankings, click country for drilldown, use play button to see changes over time</div>
 
             <div class="row" style="height: 5vh;">
                 <div class="col-lg-5 offset-1">
