fix line chart button

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
                     <form>
-                        <button type="button" class="btn btn-default btn-sm" onclick="playAllYears()">
+                        <button type="button" id="play-button" class="btn btn-default btn-sm" onclick="playAllYears()">
                             <span class="glyphicon glyphicon-play"></span> Play
                         </button>
 
