highlight countries being compared more

--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
     </div>
     <div class="row w-100" id="mainpoint-row">
         <div class="w-100 d-flex justify-content-center align-content-center text-center flex-column">
-                The United States currently (2020) ranks <span id="us-rank-compared-to-selected">#2 in the world</span>
+                <div>The <strong class="px-3 py-1 bg-white">United States</strong> currently (2020) ranks</div>
+                <span id="us-rank-compared-to-selected">#2 in the world</span>
                 <div id="mainpoint-suffix" class="d-inline">in global consumption emissions.</div>
         </div>
     </div>
