--- a/index.html
+++ b/index.html
@@ -254,6 +254,8 @@
             <div class="content-section" id="solutionDiv">
                 <div class="row">
                     <div class="col-md-6">
+                        <div class="gauge-title">Comparing Safe CO2 Levels</div>
+                        <div class="gauge-subtitle">(Million Tonnes)</div>
                         <div id="gaugeVis"></div>
                     </div>
                     <div class="col-md-6">
@@ -336,7 +338,11 @@
                             This project was created by:
                             <ul>
                                 <li>Vinod Iyer</li>
-                                <li>Jerry Wycoco</li>
+                                <li>
+                                  <a class="text-warning" href="https://jerry-wycoco.com" target="_blank">
+                                        Jerry Wycoco
+                                    </a>
+                                </li>
                                 <li>
                                     <a class="text-warning" href="https://biancamorris.com" target="_blank">
                                         Bianca Morris
