--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     Impact
                 </h1>
                 <a href="#hook-row">
-                    <object id="scroll-prompt" data="/static/angles-down-solid.svg" type="image/svg+xml">
+                    <object id="scroll-prompt" data="static/angles-down-solid.svg" type="image/svg+xml">
                         <span class="text-light">Click to Scroll</span>
                     </object>
                 </a>
@@ -41,7 +41,7 @@
                         </h2>
                         <div class="row">
                             <div class="col-md-6">
-                                <img class="img-fluid border border-2 rounded h-100 shadow-sm" src="/static/phillip-flores-flood.jpg"
+                                <img class="img-fluid border border-2 rounded h-100 shadow-sm" src="static/phillip-flores-flood.jpg"
                                      alt="road closed due to flood" />
                             </div>
                             <div class="col-md-6">
@@ -93,13 +93,13 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <img class="img-fluid border border-2 rounded h-100 shadow-sm" src="/static/matt-palmer-wildfires.jpg"
+                                <img class="img-fluid border border-2 rounded h-100 shadow-sm" src="static/matt-palmer-wildfires.jpg"
                                      alt="wildfire rages at sunset in coniferous forest" />
                             </div>
                         </div>
                         <div class="row my-5">
                             <div class="col-md-6">
-                                <img class="img-fluid border border-2 rounded h-100 shadow-sm" src="/static/matt-palmer-deforestation.jpg"
+                                <img class="img-fluid border border-2 rounded h-100 shadow-sm" src="static/matt-palmer-deforestation.jpg"
                                      alt="heavily deforested region" />
                             </div>
                             <div class="col-md-6">
@@ -208,7 +208,8 @@
         <div class="col-lg-12  flex-column">
             <div class="row" style="height: 50vh;">
                 <div class="col-lg-10 offset-1">
-                    <div class="section-title" id="sanKeyTitle">These are the emission sources for United States</div>
+                    <div class="gauge-title" id="sanKeyTitle">Here is the breakdown of CO2 emission types in the United States</div>
+                    <div class="gauge-subtitle" id="sanKeyTitle">(Million Tonnes)</div>
                     <div class="content-section" id="sankeyDiv">
                     </div>
                 </div>
