Fixed play multiple playbacks, removed data not being used
Added isPlaying flag to prevent Play button from causing multiple plays.
Also, removed dummy sankey data, energy data no longer being used, adjusted calls on main.js

--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
                             <div class="section-title">About the Authors</div>
                             This project was created by:
                             <ul>
-                                <li>Vinod Iyer</li>
+                                <li><a class="text-warning" href="https://www.linkedin.com/in/vinod-iyer-01/" target="_blank">
+                                        Vinod Iyer
+                                </a></li>
                                 <li>
                                   <a class="text-warning" href="https://jerry-wycoco.com" target="_blank">
                                         Jerry Wycoco
