Added comments for heatmap, cleaned code
Added comments for heatmap, cleaned code

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="col-lg-12  flex-column">
             <div class="row" style="height: 50vh;">
                 <div class="col-lg-10 offset-1">
-                    <div class="gauge-title" id="sanKeyTitle">Here is the breakdown of CO2 emission types in the United States</div>
+                    <div class="gauge-title" id="sanKeyTitle">Here is the breakdown of CO2 emission sources for United States</div>
                     <div class="gauge-subtitle" id="sanKeyTitle">(Million Tonnes)</div>
                     <div class="content-section" id="sankeyDiv">
                     </div>
