--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="row" style="height: 50vh;">
                 <div class="col-lg-10 offset-1">
                     <div class="gauge-title" id="sanKeyTitle">Here is the breakdown of CO2 emission sources for United States</div>
-                    <div class="gauge-subtitle" id="sanKeyTitle">(Million Tonnes)</div>
+                    <div class="gauge-subtitle" id="sanKeyTitle">(CO2 in Million Tonnes)</div>
                     <div class="content-section" id="sankeyDiv">
                     </div>
                 </div>
@@ -251,19 +251,19 @@
     <div class="row w-100" style="height: 75vh;">
         <!-- SOLUTION/RESOLUTION SECTION -->
         <div class="col-12 p-5">
-            <div class="section-title">solution resolution</div>
+            <h2 class="section-title more-line-height">How different <strong class="bg-warning px-3 py-1">US</strong> emission types influence safe levels.</h2>
+                                <h3 class="section-subtitle">Check or uncheck CO2 types to see how they affect US emission totals.</h3>
+                                <br/>
             <div class="content-section" id="solutionDiv">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="gauge-title">Comparing Safe CO2 Levels</div>
-                        <div class="gauge-subtitle">(Million Tonnes)</div>
+                        <!-- <div class="gauge-title">Comparing Safe CO2 Levels</div> -->
                         <div id="gaugeVis"></div>
+                        <div class="gauge-subtitle">*CO2 in Million Tonnes</div>
                     </div>
                     <div class="col-md-6">
                         <br>
                         What you can do to make a difference?
-                        <br>
-                        (TODO: check and uncheck will adjust gauge percentage)
                         <br>
 
                         <a href="https://19january2017snapshot.epa.gov/climatechange/what-you-can-do-home_.html" class="card-link">What you can do to reduce greenhouse gases</a>
