adjust sankey node padding and height

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="row" style="height: 50vh;">
                 <div class="col-lg-10 offset-1">
                     <div class="gauge-title" id="sanKeyTitle">Here is the breakdown of CO2 emission sources for United States</div>
-                    <div class="gauge-subtitle" id="sanKeyTitle">(CO2 in Million Tonnes)</div>
+                    <br/>
                     <div class="content-section" id="sankeyDiv">
                     </div>
                 </div>
@@ -251,7 +251,7 @@
     <div class="row w-100" style="height: 75vh;">
         <!-- SOLUTION/RESOLUTION SECTION -->
         <div class="col-12 p-5">
-            <h2 class="section-title more-line-height">How different <strong class="bg-warning px-3 py-1">US</strong> emission types influence safe levels.</h2>
+            <h2 class="section-title more-line-height">How different <strong class="bg-warning px-3 py-1">US</strong> emission types influence <strong class="bg-success px-2 py-1">safe levels.</strong></h2>
                                 <h3 class="section-subtitle">Check or uncheck CO2 types to see how they affect US emission totals.</h3>
                                 <br/>
             <div class="content-section" id="solutionDiv">
