Added links for solution
Added links for solution

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         What you can do to make a difference?
                         <br>
 
-                        <a href="https://19january2017snapshot.epa.gov/climatechange/what-you-can-do-home_.html" class="card-link">What you can do to reduce greenhouse gases</a>
+                        <a href="https://19january2017snapshot.epa.gov/climatechange/what-you-can-do-home_.html" class="card-link" target="_blank">What you can do to reduce greenhouse gases</a>
 
                         <div class="form-check" id="btnGroup">
                             <br>
@@ -276,22 +276,26 @@
                                   <label class="form-check-label" for="defaultCheck1">
                                     <h4>Oil</h4>
                                   </label>
-                                  <p>Solution suggestion goes here.</p>
-                                  <p>Solution suggestion goes here.</p>
+                                  <p><a href="https://cotap.org/reduce-carbon-footprint/#:~:text=Reduce%20Your%20Carbon%20Footprint%20From%20Driving" class="card-link" target="_blank">Reduce your carbon footprint from driving</a></p>
                                   <br>
                                   <input class="form-check-input co2-box" type="checkbox" value="Gas" id="gasCheck" checked="checked">
                                   <label class="form-check-label" for="defaultCheck1">
                                     <h4>Gas</h4>
                                   </label>
-                                  <p>Solution suggestion goes here.</p>
-                                  <p>Solution suggestion goes here.</p>
+
+                                    <p><a href="https://www.nrdc.org/stories/natural-gas-101#problems:~:text=NC%2DND%204.0-,Problems%20with%20Natural%20Gas,-Climate%20Change" class="card-link" target="_blank">Problems with natural gas</a></p>
+
+                                    <p><a href="https://www.nrdc.org/stories/natural-gas-101#:~:text=an%20oil%20platform.-,Alternatives%20to%20Natural%20Gas,-Gas%20proponents%20have" class="card-link" target="_blank">Alternatives to natural gas</a></p>
+
                                   <br>
                                   <input class="form-check-input co2-box" type="checkbox" value="Coal" id="coalCheck" checked="checked">
                                   <label class="form-check-label" for="defaultCheck1">
                                     <h4>Coal</h4>
                                   </label>
-                                  <p>Solution suggestion goes here.</p>
-                                  <p>Solution suggestion goes here.</p>
+
+                                    <p><a href="https://www.energy.gov/eere/renewable-energy#:~:text=programs%20at%20EERE.-,Renewable%20Energy%20at%20Home,-Homeowners%20and%20renters" class="card-link" target="_blank">Renewable Energy at Home</a></p>
+
+                                    <p><a href="https://cotap.org/reduce-carbon-footprint/#:~:text=Reduce%20Your%20Home%20Energy%20Carbon%20Footprint" class="card-link" target="_blank">Reduce your home energy carbon footprint</a></p>
                                 </div>
 
                                 <div class="col-md-6">
@@ -299,28 +303,24 @@
                                   <label class="form-check-label" for="defaultCheck1">
                                     <h4>Flaring</h4>
                                   </label>
-                                  <p>Solution suggestion goes here.</p>
-                                  <p>Solution suggestion goes here.</p>
+
+                                    <p><a href="https://www.energyforgrowth.org/memo/gas-flaring-why-does-it-happen-and-what-can-stop-it/" class="card-link" target="_blank">Gas Flaring: Why does it happen and how to stop it?
+                                    </a></p>
+
+
                                   <br>
                                   <input class="form-check-input co2-box" type="checkbox" value="Cement" id="cementCheck" checked="checked">
                                   <label class="form-check-label" for="defaultCheck1">
                                     <h4>Cement</h4>
                                   </label>
-                                  <p>Solution suggestion goes here.</p>
-                                  <p>Solution suggestion goes here.</p>
+
+                                    <p><a href="https://cen.acs.org/materials/inorganic-chemistry/Alternative-materials-shrink-concretes-giant/98/i45#:~:text=GREEN%20ALTERNATIVE%20CEMENTS" class="card-link" target="_blank">Green Alternative Cements
                                 </div>
 
                             </div>
                         </div>
                     </div>
-<!--                         <div class="form-check">
-                          <input class="form-check-input" type="checkbox" value="" id="gasCheck">
-                          <label class="form-check-label" for="defaultCheck1">
-                            <h4>Gas</h4>
-                          </label>
-                          <p>Solution suggestion goes here.</p>
-                          <p>Solution suggestion goes here.</p>
-                        </div> -->
+
 
                     </div>
 
