Calling radar chart on year change, adjusted title for radar to be consistent with other Viz
Calling radar chart on year change, adjusted title for radar to be consistent with other Viz

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
         <div class="col-12 p-5">
             <div class="row h-100">
                 <div class="col-10 offset-1">
-                    <div class="section-title">In 2020, their consumption emissions were divided like this:</div>
+                    <div class="section-title"></div>
+                    <p id="radarTitle" class="gauge-title">
+                    </p>
                     <div class="content-section" id="radarDiv">
                     </div>
                 </div>
