--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="row w-100" id="hook2-row">
         <div class="w-100 d-flex justify-content-center align-content-center text-center flex-column">
             <div>
-                In 2021, CO2 was responsible for about
+                In 2019, CO2 was responsible for about
             </div>
             <div class="big-stat">2/3</div>
             <div>
@@ -254,7 +254,7 @@
     <div class="row w-100" style="min-height: 75vh;">
         <!-- SOLUTION/RESOLUTION SECTION -->
         <div class="col-12 p-5">
-            <h2 class="section-title more-line-height">How different <strong class="px-3 py-1 bg-white">United States</strong> emission types influence <strong class="bg-success px-2 py-1">safe levels.</strong></h2>
+            <h2 class="section-title more-line-height">How different <strong class="px-3 py-1 bg-white">United States</strong> emission sources influence <strong class="bg-success px-2 py-1">safe levels</strong> in 2019</h2>
                                 <h3 class="section-subtitle">Check or uncheck CO2 types to see how they affect US emission totals.</h3>
                                 <br/>
             <div class="content-section" id="solutionDiv">
