Added 'Other' to the Gauge
Added 'Other' to the Gauge to make the production Co2 add up, also did special condition to handle Global Average display with 95% but show 100% on the gauge

--- a/index.html
+++ b/index.html
@@ -318,6 +318,12 @@
                                   </label>
 
                                     <p><a href="https://cen.acs.org/materials/inorganic-chemistry/Alternative-materials-shrink-concretes-giant/98/i45#:~:text=GREEN%20ALTERNATIVE%20CEMENTS" class="card-link" target="_blank">Green Alternative Cements
+                                    </a></p>
+                                    <br>
+                                    <input class="form-check-input co2-box" type="checkbox" value="Other" id="OtherCheck" checked="checked">
+                                    <label class="form-check-label" for="defaultCheck1">
+                                    <h4>Other</h4>
+                                    </label>
                                 </div>
 
                             </div>
